primera version del sitio

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,9 +4,94 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="En Nos Vamos Volando las mejores ofertas de paquetes turísticos, alquiler de autos y cruceros. Reserva ahora con el mejor precio y servicio">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <title>Nos Vamos Volando</title>
+    <!-------vinculo hoja de estilo normalize-->
+    <link rel="stylesheet" href="/css/normalize.css">
+    <!-------vinculo hoja de estilo css-->
+    <link rel= "stylesheet" href="/css/styles.css">
+    <link rel= "stylesheet" href="/css/index.css">
+    <!------fuente Poppins google fonts------->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;1,100;1,200;1,400&family=Poppins:wght@200;300;400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap" rel="stylesheet">
+
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #37506C;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img id="logo" src="/design/logo-nos-vamos-volando.png" width="60" height="60" alt="logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarsExample04">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Paquetes</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Vuelos</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Alojamiento</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Traslados</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="register.html">Iniciar Sesión</a>
+                    </li>
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+                </li>
+            </ul>
+            <form role="search">
+                <input class="form-control" type="search" placeholder="Encontrá tu destino" aria-label="Search">
+            </form>
+            </div>
+        </div>
+    </nav>
+    <img class="img-navbar" src="/design/jeshoots-com-mSESwdMZr-A-unsplash.jpg" alt="image-airport" width="100%" height="100%">
+    
+    <!--------------Titulo Destacados--------------------->
+    <div class="row title">
+        <div class="col-xl-4 col-lg-4 col-md-3 col-sm-3 col-12">
+         <hr>
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
+            <h3>Destacados</h3>
+        </div>
+        <div class="col-xl-4 col-lg-4 col-md-3 col-sm-3 col-12">
+            <hr>
+        </div>
+    </div>
+        <!--------------Titulo Ofertas--------------------->
+        <div class="row title">
+            <div class="col-xl-4 col-lg-4 col-md-3 col-sm-3 col-12">
+             <hr>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
+                <h3>Ofertas</h3>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-3 col-sm-3 col-12">
+                <hr>
+            </div>
+        </div>
+   
     
 </body>
 </html>
