--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,1 +1,67 @@
-@import url(normalize.css);
+.registertitle{
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
+    margin: 20px 30px 10px;
+    color: #737373;
+    background-color: #f81717;
+}
+
+.register{
+    display: flex;
+    flex-direction: column;
+}
+
+.stylearticle{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 20px 50px;
+}
+
+.styledate{
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    text-align: center;
+    margin: 1% 20%;
+    border-radius: 5px;
+}
+
+label{
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    margin: 10px 30px;
+    color: #737373;
+    background-color: #f81717;
+    border: none;
+}
+
+input{
+    color: #666;
+    border: none;
+    padding: 5px;
+}
+
+.displaybutton{
+    display: flex;
+    align-items: center;
+}
+
+button{
+    color: #737373;
+    background-color:  #FE5857;
+    text-align: center;
+    border-radius: 5px;
+    border: none;
+    padding: 5px;
+    width: 30%;
+    margin: 20px 50px;
+    transition-property: background-color;
+    transition-duration: 450ms;
+}
+
+button:hover{
+    background-color:   #f81717;
+}
