--- a/src/views/index.html
+++ b/src/views/index.html
@@ -76,7 +76,7 @@
                 <a class="nav-link" href="#">Traslados</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="register.html">Iniciar Sesión</a>
+                <a class="nav-link" href="session.html">Iniciar Sesión</a>
               </li>
               <li class="nav-item dropdown">
                 <a
