Ajuste registro y sesion. Falta formato final

--- a/src/views/session.html
+++ b/src/views/session.html
@@ -108,8 +108,14 @@
       </nav>
     </header>
     <main>
+      <section class="stylebutton">
+        <h2>Si no está registrado ingrese aquí</h2>
             <button type="register"><a class="nav-link" href="register.html">Registrese</a></button>
+      </section> 
+      <section class="stylebutton">  
+        <h2>Si tiene cuenta ingrese aquí</h2>       
             <button type="login"><a class="nav-link" href="login.html">Login</a></button>
+      <section>        
     </main>
     <footer>
 
