--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,10 +1,16 @@
+/*Formato Main */
+
+main{
+    width: 90%;
+    margin: auto;
+}
+
 /* Formato de Título */
 
 .registertitle{
     text-align: center;
     font-family: 'Poppins', sans-serif;
     font-size: 24px;
-    margin: 5% 3%;
     color: #737373;
     box-shadow: 0px 0px 10px rgb(100, 100, 100)
 }
@@ -16,7 +22,6 @@
     flex-direction: column;
     align-items: center;
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    margin: 5% 2%;
 }
 
 /* Formato de Caja con 2 items */
@@ -64,14 +69,15 @@ label{
 input{
     color: #666;
     border: none;
-    padding: 10px;
+    padding: 5px;
 }
 
 /* Button */
 
 .displaybutton{
     display: flex;
-    align-items: center;
+    margin: 20px;
+    align-items:center;
     align-self: center;
 }
 
