--- a/public/css/session.css
+++ b/public/css/session.css
@@ -1,9 +1,30 @@
+main{
+    width: 90%;
+    margin: auto;
+}
+
+.stylebutton{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items:stretch ;
+    margin: 20px;
+}
+
+h2{
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
+    margin: 5% 3%;
+    color: #737373;
+}
+
 button{
     color: #737373;
     background-color:  #FE5857;
     border-radius: 5px;
     padding: 10px;
-    margin: 20px 20px;
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
     transition-property: background-color;
     transition-duration: 450ms;
 }
