--- a/public/css/register.css
+++ b/public/css/register.css
@@ -58,10 +58,9 @@ main{
 label{
     text-align: center;
     font-family: 'Poppins', sans-serif;
-    font-size: 12px;
+    font-size: 16px;
     margin: 10px 20px;
     color: #737373;
-    background-color: #f81717;
     border: none;
     width: 50%;
 }
@@ -76,21 +75,21 @@ input{
 
 .displaybutton{
     display: flex;
-    margin: 20px;
-    align-items:center;
-    align-self: center;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items:stretch ;
 }
 
 button{
     color: #737373;
-    background-color:  #FE5857;
+    background-color: var(--logo);
     border-radius: 5px;
     padding: 10px;
-    margin: 20px 20px;
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
     transition-property: background-color;
     transition-duration: 450ms;
 }
 
 button:hover{
-    background-color:   #f81717;
+    background-color:   var(--hooverbutton);
 }
