--- a/public/css/session.css
+++ b/public/css/session.css
@@ -1,14 +1,8 @@
+@import url(index.css);
+
 main{
     width: 90%;
     margin: auto;
-}
-
-.stylebutton{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items:stretch ;
-    margin: 20px;
 }
 
 h2{
@@ -19,9 +13,17 @@ h2{
     color: #737373;
 }
 
+.stylebutton{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items:stretch ;
+    margin: 20px;
+}
+
 button{
     color: #737373;
-    background-color:  #FE5857;
+    background-color: var(--logo);
     border-radius: 5px;
     padding: 10px;
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
@@ -30,5 +32,5 @@ button{
 }
 
 button:hover{
-    background-color:   #f81717;
+    background-color:   var(--hooverbutton);
 }
