--- a/src/views/index.html
+++ b/src/views/index.html
@@ -147,14 +147,14 @@
       </article>
       <article class="producto">
           <img
-            src="/img/villa-carlos-paz.jpg"
-            alt="Villa Carlos Paz"
+            src="/img/capilla.jpg"
+            alt="Capilla del monte"
             class="imagenes"
           />
           <section class="articulo">
             <i class="fa-solid fa-plane-departure"></i>
             <div class="nombres-precios">
-              <h3 class="nombres">Villa Carlos Paz</h3>
+              <h3 class="nombres">Capilla del Monte</h3>
               <h2 class="precios">$6700</h2>
               <h4 class="tarifa">Tarifa por una persona</h4>
             </div>
@@ -177,14 +177,14 @@
       </article>
       <article class="producto">
         <img
-          src="/img/bariloche.jpeg"
-          alt="Villa Carlos Paz"
+          src="/img/cataratas.jpg"
+          alt="Cataratas del iguazu"
           class="imagenes"
         />
         <section class="articulo">
           <i class="fa-solid fa-plane-departure"></i>
           <div class="nombres-precios">
-            <h3 class="nombres">San Carlos Bariloche</h3>
+            <h3 class="nombres">Cataratas del Iguazu</h3>
             <h2 class="precios">$8900</h2>
             <h4 class="tarifa">Tarifa por una persona</h4>
           </div>
@@ -206,14 +206,14 @@
     <section class="destacados">
       <article class="producto">
           <img
-            src="/img/villa-carlos-paz.jpg"
-            alt="Villa Carlos Paz"
+            src="/img/mardel.jpg"
+            alt="Mar del Plata"
             class="imagenes"
           />
           <section class="articulo">
             <i class="fa-solid fa-plane-departure"></i>
             <div class="nombres-precios">
-              <h3 class="nombres">Villa Carlos Paz</h3>
+              <h3 class="nombres">Mar del plata</h3>
               <h2 class="precios">$6700</h2>
               <h4 class="tarifa">Tarifa por una persona</h4>
             </div>
@@ -221,14 +221,14 @@
       </article>
       <article class="producto">
           <img
-            src="/img/villa-carlos-paz.jpg"
-            alt="Villa Carlos Paz"
+            src="/img/mendoza.jpg"
+            alt="Mendoza"
             class="imagenes"
           />
           <section class="articulo">
             <i class="fa-solid fa-plane-departure"></i>
             <div class="nombres-precios">
-              <h3 class="nombres">Villa Carlos Paz</h3>
+              <h3 class="nombres">Mendoza</h3>
               <h2 class="precios">$6700</h2>
               <h4 class="tarifa">Tarifa por una persona</h4>
             </div>
@@ -236,14 +236,14 @@
       </article>
       <article class="producto">
           <img
-            src="/img/bariloche.jpeg"
-            alt="Villa Carlos Paz"
+            src="/img/merlo.jpg"
+            alt="Merlo"
             class="imagenes"
           />
           <section class="articulo">
             <i class="fa-solid fa-plane-departure"></i>
             <div class="nombres-precios">
-              <h3 class="nombres">San Carlos Bariloche</h3>
+              <h3 class="nombres">Merlo</h3>
               <h2 class="precios">$8900</h2>
               <h4 class="tarifa">Tarifa por una persona</h4>
             </div>
