--- a/src/views/session.html
+++ b/src/views/session.html
@@ -107,15 +107,17 @@
         </div>
       </nav>
     </header>
-    <main>
-      <section class="stylebutton">
+    <main class="background-img">
+      <div class="#">
+      <article class="stylebutton">
         <h2>Si no está registrado ingrese aquí</h2>
             <button type="register"><a class="nav-link" href="register.html">Registrese</a></button>
-      </section> 
-      <section class="stylebutton">  
-        <h2>Si tiene cuenta ingrese aquí</h2>       
+      </article> 
+      <article class="stylebutton">  
+        <h2>Si ya tiene cuenta ingrese aquí</h2>       
             <button type="login"><a class="nav-link" href="login.html">Login</a></button>
-      <section>        
+      </article>
+      </div>  
     </main>
     <footer>
 
