--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,12 +13,12 @@
 }
 
 :root{
-    --1: #37506C;
-    --2:#2E9AA1;
-    --3: #FEAF56;
-    --4: #FE5857;
-    --logo: #40CFFF;
-    --hooverbutton: #0000FF;
+    --azulMarino: #37506C;
+    --verdoso:#2E9AA1;
+    --amarillo: #FEAF56;
+    -coral: #FE5857;
+    --logo: rgb(64,169,245);
+    --hooverbutton: rgb(12, 122, 201);
 }
 
 h3{
@@ -113,7 +113,7 @@ main{
     .producto{
         width: 45%;
     }
-
+    
     .destacados, .ofertas{
         justify-content: space-between;
     }
