--- a/public/css/session.css
+++ b/public/css/session.css
@@ -1,36 +1,33 @@
 @import url(index.css);
 
-main{
-    width: 90%;
+/* .background-img{
     margin: auto;
-}
+    padding: 2%;
+    background: url(/design/jeshoots-com-mSESwdMZr-A-unsplash.jpg);
+    background-size:cover;
+    background-position: center;
+} */
 
 h2{
     text-align: center;
-    font-family: 'Poppins', sans-serif;
-    font-size: 24px;
     margin: 5% 3%;
-    color: #737373;
 }
-
 .stylebutton{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items:stretch ;
-    margin: 20px;
+    margin: auto;
+    text-align: center;
 }
 
 button{
-    color: #737373;
-    background-color: var(--logo);
+    color: var(--logo);
+    background-color: white;
     border-radius: 5px;
     padding: 10px;
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    transition-property: background-color;
+    transition-property: background-color, color;
     transition-duration: 450ms;
 }
 
 button:hover{
-    background-color:   var(--hooverbutton);
+    color: white;
+    background-color:   var(--logo);
 }
