--- a/public/css/register.css
+++ b/public/css/register.css
@@ -10,7 +10,6 @@
 
 .registertitle{
     font-family: 'Poppins', sans-serif;
-    font-size: 24px;
     color: rgba(0, 0 , 0, .8);
 }
 
@@ -35,16 +34,16 @@
 
 .styleform{
     border: 1px rgb(0 0 0 / 12%) solid;
-    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    box-shadow: 0px 0px 10px var(--logo);
     margin: 40px 0px;
 }
 
 .styledate{
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
+    margin-bottom: 20px;
     text-align: center;
     font-size: 16px;
-    border-radius: 5px;
 }
 
 .stylecategories{
@@ -65,7 +64,7 @@ label{
     font-size: 18px;
     margin: 30px 10px;
     color: rgba(0, 0 , 0, .8);
-    width: 20%;
+    width: 25%;
 }
 
 input{
@@ -73,7 +72,7 @@ input{
     color: rgb(70, 69, 69);
     border: none;
     padding: 10px;
-    width:75%;
+    width:65%;
 }
 
 /* Button */
