--- a/src/views/register.html
+++ b/src/views/register.html
@@ -133,7 +133,7 @@
                 <input type='text' name="nombre" id="nombre" placeholder="Indique su nombre" required>
             </div>
             <div class="styledate">
-                <label for="apellido">apellido</label>
+                <label for="apellido">Apellido</label>
                 <br>
                 <input type='text' name="apellido" id="apellido" placeholder="Indique su apellido" required>
             </div>
@@ -205,7 +205,7 @@
           </section>
             <article class="displaybutton">
             <button type="reset">Borrar datos</button>
-            <button type="submit">Enviar</button>
+            <button type="submit">Enviar</a></button>
             </article>
         </form>
       </div>
