--- a/public/css/session.css
+++ b/public/css/session.css
@@ -12,22 +12,26 @@ h2{
     text-align: center;
     margin: 5% 3%;
 }
+
+.stylesession{
+    margin-bottom: 380px;
+}
+
 .stylebutton{
     margin: auto;
     text-align: center;
 }
 
 button{
-    color: var(--logo);
-    background-color: white;
+    color: white;
+    background-color: var(rgb(11, 104, 170));
     border-radius: 5px;
     padding: 10px;
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    transition-property: background-color, color;
+    transition-property: background-color;
     transition-duration: 450ms;
 }
 
 button:hover{
-    color: white;
-    background-color:   var(--logo);
+    background-color:   rgb(12, 122, 201);
 }
