--- a/src/views/register.html
+++ b/src/views/register.html
@@ -128,28 +128,28 @@
             </article> -->
             <article class="stylearticle">
             <div class="styledate">
-                <label for="nombre">Nombre</label>
+                <label for="name">Nombre</label>
                 <br>
-                <input type='text' name="nombre" id="nombre" placeholder="Indique su nombre" required>
+                <input type='text' name="name" id="name" placeholder="Indique su nombre" required>
             </div>
             <div class="styledate">
-                <label for="apellido">Apellido</label>
+                <label for="surname">Apellido</label>
                 <br>
-                <input type='text' name="apellido" id="apellido" placeholder="Indique su apellido" required>
+                <input type='text' name="surname" id="surname" placeholder="Indique su apellido" required>
             </div>
             </article>
             <article class="stylearticle">
             <div class="styledate">
-                <label for="fechadenacimiento">Fecha de nacimiento</label>
+                <label for="birthdate">Fecha de nacimiento</label>
                 <br>
-                <input type='date' name="fechadenacimiento" id="fechadenacimiento" placeholder="Indique su fecha de nacimiento" required>
+                <input type='date' name="birthdate" id="birthdate" placeholder="Indique su fecha de nacimiento" required>
             </div>
             </article>
             <article class="stylearticle">
               <div class="styledate">
-                  <label for="telefono">Teléfono</label>
+                  <label for="phone">Teléfono</label>
                   <br>
-                  <input type='tel' name="telefono" id="telefono" placeholder="Indique su número telefónico" required>
+                  <input type='tel' name="phone" id="phone" placeholder="Indique su número telefónico" required>
               </div>
               </article>
 <!--             <article class="stylearticle">
