--- a/public/css/session.css
+++ b/public/css/session.css
@@ -1,5 +1,3 @@
-@import url(index.css);
-
 /* .background-img{
     margin: auto;
     padding: 2%;
@@ -10,7 +8,7 @@
 
 h2{
     text-align: center;
-    margin: 5% 3%;
+    margin: 20px 0 10px;
 }
 
 .stylesession{
@@ -24,7 +22,7 @@ h2{
 
 button{
     color: white;
-    background-color: var(rgb(11, 104, 170));
+    background-color: var(--logo);
     border-radius: 5px;
     padding: 10px;
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
@@ -33,5 +31,5 @@ button{
 }
 
 button:hover{
-    background-color:   rgb(12, 122, 201);
+    background-color:   var(--hooverbutton);
 }
