--- a/public/css/index.css
+++ b/public/css/index.css
@@ -111,18 +111,22 @@ main{
     min-height: 285px;
     border-bottom: 10px;
     background-color: white;
+    margin: auto;
     margin-bottom: 15px;
     border-radius: 8px;
+    transition-property: background-color;
+    transition-duration: 1s;
 }
 
 .producto:hover{
     cursor: pointer;
     box-shadow: 0px 0px 15px #37506C;
+    background-color: #8bf0ff;
 }
 
 .imagenes{
     width: 100%;
-    height: 75%;
+    max-height: 75%;
     border-radius: 8px 8px 0px 0px;
 }
 
@@ -153,7 +157,7 @@ main{
 }
 
 .producto:hover .articulo i{
-transform: translateX(525%) translateY(-400%) /* rotate(360deg) */;
+transform: translateX(525%) translateY(-425%) /* rotate(360deg) */;
 right: 20px;
 }
 
@@ -181,11 +185,17 @@ right: 20px;
 @media (min-width: 420px){
     .producto{
         width: 45%;
+        height: 250px;
     }
 
     .destacados, .ofertas{
         justify-content: space-between;
     }
+
+    .producto:hover .articulo i{
+        transform: translateX(525%) translateY(-425%) /* rotate(360deg) */;
+        right: 20px;
+        }
 }
 
 @media (min-width: 850px){
@@ -194,9 +204,10 @@ right: 20px;
         height: 400px;
     }
 
-    .imagenes{
-        height: 200px;
-    }
+    .producto:hover .articulo i{
+        transform: translateX(675%) translateY(-525%) /* rotate(360deg) */;
+        right: 20px;
+        }
 
     .nombres{
         padding-top: 15px;
